# unrealircd_rpc_py

./: .gitignore  LICENSE  MANIFEST.in  README.MD  README.md  TestObject.py  how_to_use_id.py  how_to_use_it.py  how_to_use_it_live.py  how_to_use_it_live_class.py  how_to_use_it_live_func.py  how_to_use_json_to_sql.py  pyproject.toml  requirements.txt  setup.py  version.json
.github/workflows/: python-app.yml
db/: data.db
unrealircd_rpc_py/: Channel.py  Connection.py  ConnectionFactory.py  Definition.py  EngineError.py  Live.py  LiveConnectionFactory.py  Loader.py  Log.py  Name_ban.py  Rpc.py  Server.py  Server_ban.py  Server_ban_exeption.py  Spamfilter.py  Stats.py  User.py  Whowas.py  __init__.py
unrealircd_rpc_py/connections/live/: ILiveConnection.py  live_http.py  live_unixsocket.py
unrealircd_rpc_py/connections/sync/: IConnection.py  __init__.py  http.py  unixsocket.py
unrealircd_rpc_py/exceptions/: rpc_exceptions.py
unrealircd_rpc_py/modules/tosql/: database.py  models.py  tosql.py
unrealircd_rpc_py/objects/: Channel.py  Connthrottle.py  Definition.py  Log.py  Message.py  Name_ban.py  Rpc.py  Security_group.py  Server.py  Server_ban.py  Server_ban_exeption.py  Spamfilter.py  Stats.py  User.py  Whowas.py
unrealircd_rpc_py/utils/: utils.py
